# territory-growth-intelligence-mas-v2

./: .env.example  .gitignore  LICENSE  Makefile  dashboard-channels-tab.md  dashboard-countries-tab.md  dashboard-devices-tab.md  dashboard-filters-logic.md  dashboard-market-overview-tab.md  dashboard-passport.md  dashboard-scoring-logic.md  dashboard-scoring-tab.md  dashboard-signals-logic.md  dashboard-signals-tab.md  docker-compose.yml  reports-logic.md
backend/: README.md  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 202605230001_init_db_schema.py  202605240001_add_ingestion_audit.py  202605240002_add_async_ingestion_fields.py  202605310001_add_fact_calendar_fields.py  202606160001_add_project_channel_region_dims.py  202606170001_add_country_intelligence_indexes.py  202606170002_remove_project_entity.py  202606190001_add_competitor_intelligence_indexes.py  202606210001_add_channel_intelligence_indexes.py  202606210002_add_device_intelligence_indexes.py  202606210003_add_derived_signals.py  202606210004_add_derived_signal_scope.py  202606210005_add_opportunity_scores.py  202606210006_add_budget_strategy_reports.py  202606210007_add_budget_strategy_context.py  202606290001_add_mas_foundation.py  202606290002_add_llm_provider_layer.py  202606290003_add_rag_foundation.py  202606290004_add_evidence_pack.py  202606290005_add_mas_run_persistence_fields.py  202606290006_add_history_layer.py  202606290007_add_alerts_layer.py  202606290008_add_feedback_loop.py
backend/app/: main.py
backend/app/alerts/: schemas.py  service.py
(+171 files in other folders)
