[project]
name = 'territory-growth-intelligence-backend'
version = '0.1.0'
description = 'Backend service for Territory Growth Intelligence.'
readme = 'README.md'
requires-python = '>=3.11'
dependencies = [
  'alembic>=1.13.0',
  'fastapi>=0.111.0',
  'psycopg[binary]>=3.1.0',
  'pydantic-settings>=2.2.0',
  'python-dotenv>=1.0.0',
  'sqlalchemy>=2.0.0',
  'uvicorn[standard]>=0.30.0',
]

[dependency-groups]
dev = [
  'ruff>=0.5.0',
]

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
select = ['E', 'F', 'I', 'UP', 'B']

[tool.uv]
package = false
